syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.ac.ntsc.ta.proto";
option java_outer_classname = "RegistryTypesProto";
option go_package = "./;pb";

package ta.registry.types;

import "google/protobuf/timestamp.proto";

message RegistRouterRequest {
  google.protobuf.Timestamp sysTime = 1;
  string machineID = 2;
}

message RegistServerRequest {
  google.protobuf.Timestamp sysTime = 1;
  string machineID = 2;
}